@@ -4,3 +4,4 @@ https://www.koreaherald.com/view.php?ud=20241002050690
 https://www.koreaherald.com/view.php?ud=20241007050694
 https://www.koreaherald.com/view.php?ud=20241003050085
 https://www.koreaherald.com/view.php?ud=20241002050512
+https://www.koreaherald.com/view.php?ud=20241011050558
